--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bold.co",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://luisalvare21.github.io/PruebaFrontend",
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@testing-library/jest-dom": "^5.14.1",
